--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
       </div>
 
       <!--Resume-->
-
+  <div class="album py-5 bg-light mb-5">
     <div class="container">
         <div class="row row-cols-2 row-cols-lg-5 g-2 g-lg-3">
           <div class="col">
@@ -263,7 +263,7 @@
           </div> -->
         </div>
       </div>
-
+    </div>
       <!--Resume-->
       <div class="card border-0 m-5" id="resume">
         <div class="card-body mx-auto">
@@ -388,13 +388,13 @@
         </div>
       </div>
           <!--contact-->
-
+        
           <div class="card border-0 m-3" id="contact">
             <div class="card-body mx-auto m-5">
                <h4 class="lh-base">Contact:</h4>
             </div>
           </div>
-
+         <div class="album py-5 bg-light mb-5">
           <div class="card m-2 mx-auto p-3" style="max-width: 540px;">
             <div class="row g-0">
               <div class="col-md-4">
@@ -421,7 +421,7 @@
               </div>
             </div>
           </div>
-
+        </div>
           <!--Blog about Me-->
           <section class="py-5 text-center container" id="about-me">
             <div class="row py-lg-5">
