--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
 
     <style>
+      ul {
+        list-style-type: none;
+      }
       .bd-placeholder-img {
         font-size: 1.125rem;
         text-anchor: middle;
@@ -132,16 +135,16 @@
           </div>
           
           <div class="col">
-            <div class="p-3 border"><STRONG>WEB:</STRONG> FLASK, Templating, API, Databases</div>
+            <div class="p-3 border-0"><STRONG>WEB:</STRONG> FLASK, Templating, API, Databases</div>
           </div>
           <div class="col">
-            <div class="p-3 border"><strong>CS:</strong>Software Development, OOP, Machine Code</div>
+            <div class="p-3 border-0"><strong>CS:</strong>Software Development, OOP, Machine Code</div>
           </div>
           <div class="col">
-            <div class="p-3 border"><strong>SPD:</strong>Prototyping, Agile, UX/UI</div>
+            <div class="p-3 border-0"><strong>SPD:</strong>Prototyping, Agile, UX/UI</div>
           </div>
           <div class="col">
-            <div class="p-3 border"><strong>Intensives:</strong> Project Building</div>
+            <div class="p-3 border-0"><strong>Intensives:</strong> Project Building</div>
           </div>
           <div class="col">
             <div class="p-3 border-0"></div>
@@ -150,10 +153,10 @@
             <div class="p-3 border-0"><strong>Languages:</strong> </div>
           </div>
           <div class="col">
-            <div class="p-3 border">HTML, JS, CSS</div>
+            <div class="p-3 border-0">HTML, JS, CSS</div>
           </div>
           <div class="col">
-            <div class="p-3 border">Python</div>
+            <div class="p-3 border-0">Python</div>
           </div>
           <div class="col">
             <div class="p-3 border-0"></div>
@@ -165,7 +168,7 @@
             <div class="p-3 border-0"><strong>Frameworks:</strong></div>
           </div>
           <div class="col">
-            <div class="p-3 border">Bootstrap</div>
+            <div class="p-3 border-0">Bootstrap</div>
           </div>
           <div class="col">
             <div class="p-3 border-0"></div>
@@ -192,10 +195,10 @@
             <div class="p-3 border-0">University of Michigan:</div>
           </div>
           <div class="col">
-            <div class="p-3 border">Python Data Structures: 7 week certificate course</div>
+            <div class="p-3 border-0">Python Data Structures: 7 week certificate course</div>
           </div>
           <div class="col">
-            <div class="p-3 border">Getting Started w/ Python: 7 week certificate course</div>
+            <div class="p-3 border-0">Getting Started w/ Python: 7 week certificate course</div>
           </div>
           <div class="col">
             <div class="p-3 border-0"></div>
@@ -207,7 +210,7 @@
             <div class="p-3 border-0">Grow with Google:</div>
           </div>
           <div class="col">
-            <div class="p-3 border">Intro to Git and Github: Certificate course</div>
+            <div class="p-3 border-0">Intro to Git and Github: Certificate course</div>
           </div>
           <div class="col">
             <div class="p-3 border-0"></div>
@@ -222,7 +225,7 @@
             <div class="p-3 border-0">Stanford University:</div>
           </div>
           <div class="col">
-            <div class="p-3 border">Developping Python</div>
+            <div class="p-3 border-0">Developping Python</div>
           </div>
           <div class="col">
             <div class="p-3 border-0"></div>
@@ -237,7 +240,7 @@
             <div class="p-3 border-0">Min T Mentors in Tech:</div>
           </div>
           <div class="col">
-            <div class="p-3 border">Industry Mentorship</div>
+            <div class="p-3 border-0">Industry Mentorship</div>
           </div>
           <div class="col">
             <div class="p-3 border-0"></div>
