--- a/index.html
+++ b/index.html
@@ -121,8 +121,10 @@
    
       <!-Current experience-->
       <div class="card border-0 mb-5" id="computer-science">
-        <div class="card-body">
-           <h4 class="lh-base offset-2"> Current Computer Science Progress:</h4>
+        <div class="card-body mx-auto">
+           <h4 class="lh-base ext-nowrap"> Current Computer Science Progress</h4>
+             <p><h6>Classes @ Makeschool, and other training<h6></p>
+           
         </div>
       </div>
 
@@ -289,28 +291,28 @@
             <div class="p-1 border-0"></div>
           </div>
           <div class="col">
-            <div class="p-1 border-0"><strong>Santa Clara University:</strong></div>
+            <div class="p-1 border"><strong>Santa Clara University:</strong></div>
           </div>
           <div class="col">
-            <div class="p-1 border-0">Bachelors of Science: Finance</div>
+            <div class="p-1 border">Bachelors of Science: Finance</div>
           </div>
           <div class="col">
-            <div class="p-1 border-0">Minors: Retail Management, International Business and Entrepreneurship </div>
+            <div class="p-1 border">Minors: Retail Management, International Business and Entrepreneurship </div>
           </div>
           <div class="col">
-            <div class="p-1 border-0"><strong>Apparel Arts:</strong></div>
+            <div class="p-1 border"><strong>Apparel Arts:</strong></div>
           </div>
           <div class="col">
-            <div class="p-1 border-0">Pattern Making</div>
+            <div class="p-1 border">Pattern Making</div>
           </div>
           <div class="col">
-            <div class="p-1 border-0">Design</div>
+            <div class="p-1 border">Design</div>
           </div>
           <div class="col">
-            <div class="p-1 border-0"><strong>Instituto di Moda Burgo Milan:</strong></div>
+            <div class="p-1 border"><strong>Instituto di Moda Burgo Milan:</strong></div>
           </div>
           <div class="col">
-            <div class="p-1 border-0">Design Principles</div>
+            <div class="p-1 border">Design Principles</div>
           </div>
           <div class="col">
             <div class="p-1 border-0"></div>
@@ -328,49 +330,49 @@
             <div class="p-1 border-0"><h4><strong>Employment:</strong></h4></div>
           </div>
           <div class="col">
-            <div class="p-1 border-0"></div>
+            <div class="p-1 border-0 text-muted">Title:</div>
           </div>
           <div class="col">
-            <div class="p-1 border-0"></div>
+            <div class="p-1 border-0 text-muted">Description:</div>
           </div>
           <div class="col">
-            <div class="p-1 border-0"><strong>Andrea Graziosi:</strong>
+            <div class="p-1 border"><strong>Andrea Graziosi:</strong>
           </div>
           </div>
           <div class="col">
-            <div class="p-1 border-0">Founder/Owner</div>
+            <div class="p-1 border">Founder/Owner</div>
           </div>
           <div class="col">
-            <div class="p-1 border-0 fw-light"><p class="lh-sm">Garden Inn Retreat Center 2016-2018;</p>
+            <div class="p-1 border fw-light"><p class="lh-sm">Garden Inn Retreat Center 2016-2018;</p>
               <p class="lh-sm">Yoga Instruction 2016-present</p>
             </div>
           </div>
           <div class="col">
-            <div class="p-1 border-0"><strong>Utterly:</strong></div>
+            <div class="p-1 border"><strong>Utterly:</strong></div>
           </div>
           <div class="col">
-            <div class="p-1 border-0">Creative Director</div>
+            <div class="p-1 border">Creative Director</div>
           </div>
           <div class="col">
-            <div class="p-1 border-0 fw-light">Prototyping - Apparel start-up</div>
+            <div class="p-1 border fw-light">Prototyping - Apparel start-up</div>
           </div>
           <div class="col">
-            <div class="p-1 border-0"><strong>IMS inc:</strong></div>
+            <div class="p-1 border"><strong>IMS inc:</strong></div>
           </div>
           <div class="col">
-            <div class="p-1 border-0">Senior Account Mananger</div>
+            <div class="p-1 border">Senior Account Mananger</div>
           </div>
           <div class="col">
-            <div class="p-1 border-0 fw-light">Databases Design Consultant</div>
+            <div class="p-1 border fw-light">Databases Design Consultant</div>
           </div>
           <div class="col">
-            <div class="p-1 border-0"><strong>LVMH group; DFS:</strong></div>
+            <div class="p-1 border"><strong>LVMH group; DFS:</strong></div>
           </div>
           <div class="col">
-            <div class="p-1 border-0">Data Analysis</div>
+            <div class="p-1 border">Data Analysis</div>
           </div>
           <div class="col">
-            <div class="p-1 border-0 fw-light">Retail Planning and Buying</div>
+            <div class="p-1 border fw-light">Retail Planning and Buying</div>
           </div>
           <div class="col">
             <div class="p-1 border-0"></div>
@@ -385,10 +387,10 @@
             <div class="p-1 border-0"><h4><strong>Languages:</strong></h4></div>
           </div>
           <div class="col">
-            <div class="p-1 border-0">English, Portuguese, Spanish, French</div>
+            <div class="p-1 border">English, Portuguese, Spanish, French</div>
           </div>
           <div class="col">
-            <div class="p-1 border-0">Sankrit 2016-present</div>
+            <div class="p-1 border">Sankrit 2016-present</div>
           </div>
         </div>
       </div>
